docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/Redial_Cadence__mdt.object-meta.xml
<CustomObject>
    <label>Redial Cadence</label>
    <pluralLabel>Redial Cadences</pluralLabel>
</CustomObject>