docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>