docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Final_stage__c.field-meta.xml
<CustomField>
    <fullName>Final_stage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final stage</label>
    <type>Checkbox</type>
</CustomField>