docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Hopper_Priority__c.field-meta.xml
<CustomField>
    <fullName>Hopper_Priority__c</fullName>
    <label>Hopper Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>