docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Lead_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage__c</fullName>
    <label>Lead Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>