docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Maximum_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Call_Count__c</fullName>
    <label>Maximum Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>