docs/sf-export/sfdx-raw/objects/Redial_Cadence__mdt/fields/Re_dial_time__c.field-meta.xml
<CustomField>
    <fullName>Re_dial_time__c</fullName>
    <label>Re-dial time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>